themes/Vision/index.scss
@import "./src/variables";
@import "./src/mixins";
@import "./src/core";
@import "./src/desktop";
@import "./src/gui";
@import "./src/animations";
@import "~@fortawesome/fontawesome-pro/css/all.css";
@import url("https://fonts.googleapis.com/css?family=Didact+Gothic");
@import "./node_modules/bootstrap/dist/css/bootstrap.css";

body,
html {
  width: 100%;
  height: 100%;
}

.osjs-root {
  font-size: 15px;
  background-image: url("./src/images/wallpaper.png");
}

::-webkit-scrollbar {
  width: 15px;
}

.osjs-window {
  // @include window;
  // background: #275362;
  // padding :0px;

  &[data-focused="false"] {
    opacity: 0.5;
  }

  &[data-loading="true"] {
    pointer-events: none;

    &::after {
      background: #275362;
    }
  }
}

.osjs-window-button {
  position: relative;
  min-width: 3em;

  &:not(:last-child) {
    margin-right: 0;
  }

  & > div {
    width: 100%;
    height: 3em;
    background-position: 50% 50%;
    background-repeat: no-repeat;
  }

  &:hover > div {
    -webkit-transition: all 200ms ease-in;
    // -webkit-transform: scale(1.2);
    -ms-transition: all 200ms ease-in;
    // -ms-transform: scale(1.2);
    -moz-transition: all 200ms ease-in;
    // -moz-transform: scale(1.2);
    transition: all 200ms ease-in;
    // transform: scale(1.2);
  }

  &[data-action="minimize"] {
    & > div {
      background-position: 50% 50%;
      background-size: 14px;
      background-image: url("./src/images/minimize.svg");
    }
    &:hover {
      transform: scale(1.2);
    }
  }
  &[data-action="maximize"] {
    & > div {
      background-position: 50% 50%;
      background-size: 14px;
      background-image: url("./src/images/maximize.svg");
    }
    &:hover {
      transform: scale(1.2);
    }
  }

  &[data-action="close"] {
    min-width: 3em;

    & > div {
      background-position: 50% 50%;
      background-size: 14px;
      background-image: url("./src/images/close.svg");
    }

    &:hover {
      transform: scale(1.2);
    }
  }
}

.osjs-window-content {
  background-color: #fff;
  margin: 0;
  height: calc(100% - #{$base-margin / 10});
  width: 100%;
  max-width: 100%;
}

.osjs-window-title {
  font-size: 14px;
  margin: 0px 0px 0px 9px;
  height: auto !important;
  color: white;
}

.osjs-window-icon {
  padding: 0;
}

.osjs-window-breadcrumb {
  display: flex;
  line-height: 0;
  flex-grow: 50;
  height: auto !important;
  align-items: baseline;
  font-size: 11px !important;

  .disabledBreadcrumb {
    font-weight: bold;
  }
}
.activeBreadcrumb > a > i {
  font-size: 0px;
}
.disabledBreadcrumb > a > i {
  font-size: 0px;
}
.osjs-gui-menu {
  ul {
    background-color: #265160;
    border: 1px solid #265160;
    color: white;
  }

  li:hover > div > span {
    background-color: $active-background;
  }
}

.osjs-panel-item[data-name="tray"] > div > img {
  margin-left: -7px !important;
}

.osjs-gui-menu-separator::after {
  background-color: #d7d7d7;
}

.osjs-gui-button {
  & > button {
    // Fallback
    background-color: #010101;
  }
}

.osjs-gui-button > button {
  background: #010101;
  border: 1px solid #fff;
  color: #ffffff;
}

.osjs-gui-tabs-header > div {
  background-color: #333333;
  color: white;
}

.osjs-gui-tabs-header > div.osjs__active {
  background-color: #333333;
}

.osjs-window-icon > i {
  width: 3em;
  height: 3em;
  background-color: #275362;
  margin: 4px 5px 2px 20px !important;
}

.osjs-panel-item[data-name="windows"] > div {
  font-size: 12px;
  color: white !important;
  background-color: #275362 !important;
  border-radius: 0px;
  padding: 12px 3px !important;
  align-self: center;
  img {
    max-height: 20px;
  }
}

.osjs-panel .osjs-panel-item--icon > img {
  height: 2.8em;
}

.osjs-gui-menu ul > li {
  padding: 0px;
}

// .osjs-panel-item[data-name="windows"] {
//   .osjs-panel-item--clickable:hover img {
//     -webkit-transition: all 200ms ease-in;
//     -webkit-transform: scale(1.1);
//     -ms-transition: all 200ms ease-in;
//     -ms-transform: scale(1.1);
//     -moz-transition: all 200ms ease-in;
//     -moz-transform: scale(1.1);
//     transition: all 200ms ease-in;
//     transform: scale(1.1);
//   }

//   .osjs-panel-item--clickable:hover {
//     background: #588fa26e;
//   }
// }

// .osjs-panel-item--clickable:hover img {
// -webkit-transition: all 200ms ease-in;
// -webkit-transform: scale(1.1);
// -ms-transition: all 200ms ease-in;
// -ms-transform: scale(1.1);
// -moz-transition: all 200ms ease-in;
// -moz-transform: scale(1.1);
// transition: all 200ms ease-in;
// transform: scale(1.1);
// }

.customActions > .btn.btn-primary {
  color: #345561 !important;
  background-color: #e4e7eb !important;
  border-radius: 42px;
  font-size: 13px;
  box-shadow: 0px 0px 4px 0px grey;
}

.customActions .btn {
  margin-right: 7px;
  border-color: #c5d2d6 !important;
}
.customActions > .btn.btn-primary:hover {
  // color: #345561 !important;
  // border: 0px solid #c7cdd5;
  border-color: #c7cdd5;
  background-color: #c5d2d6 !important;
  // > i {
  //   color: whitesmoke !important;
  // }
}


// For all action buttons in a app on list view page
// .customActions.dash-manager-buttons > button:last-child {
//   margin-right: 2.4%;
// }

.osjs-panel {
  height: 2.5em;
  min-height: 2.5em;
}

.osjs-panel .osjs-panel-item--icon {
  margin: 0px 2px 0px 2px;

  > i > span {
    font-size: 14px;
  }
}

.osjs-window-header {
  min-height: 2em;
  height: auto;
  align-items: center;
  // display: none;
}

[data-maximized="false"] {
  .osjs-window-header {
    display: flex;
  }
}

[data-maximized="true"] {
  .osjs-window-header {
    display: none;
  }
}

[data-id="Profile_Window"],
[data-id="ChatWindow"],
[data-id="PreferencesWindow"] {
  .osjs-window-header {
    display: flex;
  }
}

// [data-id="Profile_Window"],
// [data-id="Profile_Window"] {
//   .osjs-window-header  {
//     display: flex;
//   }
// }

.osjs-panel-item[data-name="menu"] {
  display: contents;
  align-items: center;
  padding: 0;
  width: 10%;
  padding: 0px !important;
}

.k-dateinput-wrap {
  input:not([type]),
  input[type="text"]:not(.browser-default),
  input[type="password"]:not(.browser-default),
  input[type="email"]:not(.browser-default),
  input[type="url"]:not(.browser-default),
  input[type="time"]:not(.browser-default),
  input[type="date"]:not(.browser-default),
  input[type="datetime"]:not(.browser-default),
  input[type="datetime-local"]:not(.browser-default),
  input[type="tel"]:not(.browser-default),
  input[type="number"]:not(.browser-default),
  input[type="search"]:not(.browser-default),
  textarea.materialize-textarea {
    background-color: transparent;
    border: none;
    border-bottom: 1px solid #9e9e9e;
    border-radius: 0;
    outline: none;
    height: 3rem;
    width: 100%;
    font-size: 16px;
    margin: 0 0 0px 0;
    padding: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
    -webkit-box-sizing: content-box;
    box-sizing: content-box;
    -webkit-transition: border 0.3s, -webkit-box-shadow 0.3s;
    transition: border 0.3s, -webkit-box-shadow 0.3s;
    transition: box-shadow 0.3s, border 0.3s;
    transition: box-shadow 0.3s, border 0.3s, -webkit-box-shadow 0.3s;
  }
}

label {
  font-size: 14px;
  color: #9e9e9e;
}

.k-datepicker {
  margin-bottom: 8px;
}
.osjs-search-container {
  // box-shadow: 0 11px 1em rgba(0, 0, 0, 0.5);
  // background: #333333eb;
  color: #fff;
}
.appmenu .app-bar .app {
  border-bottom: 1px solid #275362;
}
.appmenu .app-bar .app .appcaption {
  color: #275362;
}
.profile-dropdown-div:hover {
  color: #275362;
}

// This is for the spacing and we have added it to to contain till 1000 or 5000 page count on the dropdown
// [BUG] #27118
.k-pager-sizes .k-dropdown,
.k-pager-sizes .k-dropdowntree,
.k-pager-sizes > select {
  width: 7em;
}

.sidenav---navitem---9uL5T {
  color: white !important;
}

.col-md-12.dash-manager-buttons {
  padding-right: 0px;
  padding-left: 0px;
  margin-top: 1px;
  margin-bottom: 2px;

  .form-control {
    border: 0px !important;
  }
}
.card {
  border: 0px;
}

.col-md-3.docListDiv {
  padding: 0px 4px 0px 15px !important;
}

.dash-manager-buttons.card-header {
  margin: 3px;

  .button.btn.btn-primary {
    padding: 0.1rem 0.4rem;
  }
}

.docListBody.borderActive p > a,
.docListBody.border p > a {
  font-size: 13px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.links > button {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.k-upload .k-dropzone,
.k-upload .k-upload-button {
  font-size: 12px;
}
.tab-content {
  min-height: 830px;
}
.accordion .card .card-header > button {
  border-color: #a2b5bc;
  color: #345561 !important;
  background-color: #e4e7eb !important;
  border-radius: 6px;
  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
}
.accordion .card .card-header {
  background-color: transparent !important;
}
.collapse.show .card-body .docItems .docListBody > i {
  font-size: 10px;
}
@import "variables.scss";
@import "eox.scss";

